Stopped white space overflow of x-axis

--- a/src/frontend/Components/Shared-Layout-Animation/Layout.module.css
+++ b/src/frontend/Components/Shared-Layout-Animation/Layout.module.css
@@ -1,10 +1,10 @@
 .image {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    object-fit: cover;
-  }
+  max-width: 100%;
+  height: auto;
+  display: block;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  object-fit: cover;
+}
