--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,21 @@
 .wrapper:active {
-    transform: scale(.85) translate(-50%, -50%);
+  transform: scale(0.85) translate(-50%, -50%);
+}
+
+.wrapper:active img {
+  transform: scale(1.1);
+}
+
+@keyframes fadeIn {
+  0% {
+    transform: scale(0);
   }
-  
-  .wrapper:active img {
-    transform: scale(1.1);
+  100% {
+    transform: scale(1);
   }
-  
-  @keyframes fadeIn {
-    0% {
-      transform: scale(0);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-  
-  body {
-      max-height: 100vh;
-      overflow-y: hidden;
-  }
+}
+
+body {
+  height: 100%;
+  overflow-y: auto;
+}
